Login title changed

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -8,7 +8,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-	<title>JSF 2.0 Hello World</title>
+	<title>Login Page</title>
 	<link rel="stylesheet" href="styles/main.css" />
 </h:head>
 <h:body>
