Mapping for Usertable Login with Hibernate in work

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -30,12 +30,12 @@
 		
 		<div>
 			<h:outputLabel for="username" value="#{msg.loginUser}: " />
-			<h:inputText id="username" required="true"/>
+			<p:inputText id="username" required="true"/>
 		</div>
 
 		<div>
 			<h:outputLabel for="password" value="#{msg.loginPassword}: " />
-			<h:inputText id="password" required="true"/>
+			<p:password id="password" required="true" />
 		</div>
 
 		<div>
