--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -17,29 +17,39 @@
 
 	<h:form id="loginForm" prependId="false" styleClass="loginForm">
 		<div class="languageSelect">
-			<p:commandLink action="#{initialBean.setCurrentLocale('de')}" update="@form">
-				<h:graphicImage id="selectGerman" value="images/german.png"/>
+			<p:commandLink action="#{initialBean.setCurrentLocale('de')}"
+				update="@form">
+				<h:graphicImage id="selectGerman" value="images/german.png" />
 			</p:commandLink>
-			<p:tooltip for="selectGerman" value="#{msg.languageGerman}" />
-			
-			<p:commandLink action="#{initialBean.setCurrentLocale('en')}" update="@form">
+
+			<p:commandLink action="#{initialBean.setCurrentLocale('en')}"
+				update="@form">
 				<h:graphicImage id="selectEnglish" value="images/english.png" />
 			</p:commandLink>
-			<p:tooltip for="selectEnglish" value="#{msg.languageEnglish}" />
 		</div>
-		
+
+		<!-- Inputfields for login -->
 		<div>
-			<h:outputLabel for="username" value="#{msg.loginUser}: " />
-			<p:inputText id="username" required="true"/>
+			<div class="loginLabel">
+				<h:outputLabel for="username" value="#{msg.loginUser}: " />
+			</div>
+			<div class="loginInput">
+				<p:inputText id="username" required="true" />
+			</div>
 		</div>
 
 		<div>
-			<h:outputLabel for="password" value="#{msg.loginPassword}: " />
-			<p:password id="password" required="true" />
+			<div class="loginLabel">
+				<h:outputLabel for="password" value="#{msg.loginPassword}: " />
+			</div>
+			<div class="loginInput">
+				<p:password id="password" required="true" />
+			</div>
 		</div>
 
-		<div>
-			<p:commandButton action="#{loginManager.doLogin()}" value="#{msg.loginBtn}" />
+		<div class="loginBtn">
+			<p:commandButton action="#{loginManager.doLogin()}"
+				value="#{msg.loginBtn}" />
 		</div>
 	</h:form>
 
